--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
   --dark-clr-1: rgba(0, 0, 0, 0.5);
   --dark-clr-2: #262626;
+
+  --accent-clr-1: #333197;
+
+  --default-animation: 400ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  --default-bor-rad: 6px;
 }
 
 body {
