--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
   --accent-clr-1: #333197;
 
-  --default-animation: 400ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  --default-animation: 400ms ease-in-out;
   --default-bor-rad: 6px;
 }
 
