--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
   --default-bor-rad: 6px;
 }
 
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -26,4 +33,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul,
+ol {
+  list-style-type: none;
 }
