--- a/src/components/Gallery/ImageGallery.module.css
+++ b/src/components/Gallery/ImageGallery.module.css
@@ -1,9 +1,22 @@
+:root {
+    --default-margin: 25px;
+}
+
 .galleryList {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
 
-    gap: 30px;
-    margin: 50px 0px;
+    gap: var(--default-margin);
+    margin: var(--default-margin) 0px;
+    margin-left: auto;
+    margin-right: auto;
+
+    max-width: 1200px;
+}
+
+.imageModal {
+    width: 100%;
+    height: auto;
 }
