--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --dark-clr-2: #262626;
 
   --accent-clr-1: #333197;
+  --accent-clr-2: #fded5f;
 
   --default-animation: 400ms ease-in-out;
   --default-bor-rad: 6px;
