--- a/src/components/Gallery/ImageGallery.module.css
+++ b/src/components/Gallery/ImageGallery.module.css
@@ -16,7 +16,19 @@
     max-width: 1200px;
 }
 
+.imageItem {
+    width: 350px;
+    height: 200px;
+}
+
 .imageModal {
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 400px) {
+    .imageItem {
+        width: 300px;
+        height: 150px;
+    }
 }
